compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__discarded_argument_called_value_does_not_have_the_same_name_as_discarded_one.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"wibble\", \"wobble\")\npub fn woo(_: a, _value: b) -> Nil\n"
---
----- SOURCE CODE

@external(erlang, "wibble", "wobble")
pub fn woo(_: a, _value: b) -> Nil


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([woo/2]).

-spec woo(any(), any()) -> nil.
woo(_value, _value@1) ->
    wibble:wobble(_value, _value@1).
