compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__inlining_external_functions_from_another_module.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "import atom\npub fn main() {\n  atom.make(\"ok\")\n}\n"
---
----- SOURCE CODE
import atom
pub fn main() {
  atom.make("ok")
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> atom:atom_().
main() ->
    erlang:binary_to_atom(~"ok").
