compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__integration_test1_3.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"Elixir.MyApp\", \"run\")\npub fn run() -> Int\n"
---
----- SOURCE CODE

@external(erlang, "Elixir.MyApp", "run")
pub fn run() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([run/0]).

-spec run() -> integer().
run() ->
    'Elixir.MyApp':run().
