compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__external_fn__integration_test7.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(erlang, \"try\", \"and\")\npub fn receive() -> Int\npub fn catch(x) { receive() }\n"
---
----- SOURCE CODE

@external(erlang, "try", "and")
pub fn receive() -> Int
pub fn catch(x) { receive() }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export(['receive'/0, 'catch'/1]).

-spec 'receive'() -> integer().
'receive'() ->
    'try':'and'().

-spec 'catch'(any()) -> integer().
'catch'(X) ->
    'try':'and'().
